--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Be free to improve this code!
     
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">Made with ❤ by
-            <a href="https://github.com/PRASILVA5"> PauloRASilva</a>
+            <a href="https://github.com/paulorasilva"> paulorasilva</a>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
